fix: Invalid CSS after resolving merge conflicts

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -71,6 +71,8 @@ html, body {
     color: theme('colors.red');
     text-decoration: underline;
     text-underline-offset: 4px;
+}
+
 /* Ugly non-Tailwindy hack, I know, but fuck it. */
 .underlined-links-parent a {
     text-decoration: underline;
